--- a/package.json
+++ b/package.json
@@ -1,5 +1,26 @@
 {
+  "name": "lab-template",
+  "version": "1.0.0",
+  "description": "A repo for SDV503 student labs",
+  "main": "app.js",
+  "scripts": {
+    "dev": "nodemon ./src/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alikahwaji/Lab-template.git"
+  },
+  "keywords": [
+    "SDV503"
+  ],
+  "author": "Ali Kahwaji",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/alikahwaji/Lab-template/issues"
+  },
+  "homepage": "https://github.com/alikahwaji/Lab-template#readme",
   "dependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.16"
   }
 }
